Add form fields, submit button & began JS business logic

--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
     <title>Triangle Tracker</title>
   </head>
   <body>
+    <div class="container">
+      <h2>Please enjoy our Triangle Tracker.</h2>
+      <h3>Enter the length of the 3 sides of the triangle and we will let you know if that triangle is Isocoles, Scaline, Equilateral or Impossible </h3>
+      <form>
+        <div class="row col-md-6 col-md-offset-3" id="blanks">
+          <div class="side1">
+            <label>Length of Side 1:</label>
+              <input id="length1" class="form-control" type="number">
+
+          </div>
+
+          <div class="side2">
+            <label>Length of Side 2:</label>
+              <input id="length2" class="form-control" type="number">
+
+          </div>
+
+          <div class="side3">
+            <label>Length of Side 3:</label>
+              <input id="length3" class="form-control" type="number">
+
+          </div>
+        </div>
+
+        <button type="submit" class="btn">Submit Triangle Side Lengths </button>
+
+
+      </form>
+    </div>
+
+
 
   </body>
 </html>
