--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container">
       <h2>Please enjoy our Triangle Tracker.</h2>
       <h3>Enter the length of the 3 sides of the triangle and we will let you know if that triangle is Isocoles, Scaline, Equilateral or Impossible </h3>
-      <form>
-        <div class="row col-md-6 col-md-offset-3" id="blanks">
+      <form id="triangle_form">
+        <div class="row col-md-6 col-md-offset-3">
           <div class="side1">
             <label>Length of Side 1:</label>
               <input id="length1" class="form-control" type="number">
@@ -34,7 +34,7 @@
 
           </div>
         </div>
-
+        <br>
         <button type="submit" class="btn">Submit Triangle Side Lengths </button>
 
 
